syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "DeviceManager.Core.Proto";

message DeviceResource {
  int32 Id = 1;
  string Name = 2;
  google.protobuf.StringValue DisplayName = 3;
  bool Online = 4;
  string MacAddress = 5;
  google.protobuf.StringValue Model = 6;
  google.protobuf.StringValue Manufacturer = 7;
  google.protobuf.Timestamp LastSeen = 8;
  google.protobuf.Timestamp LastModified = 9;
  google.protobuf.Timestamp Created = 10;
  google.protobuf.Int32Value LocationId = 11;
  string UserId = 12;
}

message DeviceResourceExtended {
  int32 Id = 1;
  string Name = 2;
  google.protobuf.StringValue DisplayName = 3;
  bool Online = 4;
  string MacAddress = 5;
  google.protobuf.StringValue Model = 6;
  google.protobuf.StringValue Manufacturer = 7;
  google.protobuf.Timestamp LastSeen = 8;
  google.protobuf.Timestamp LastModified = 9;
  google.protobuf.Timestamp Created = 10;
  google.protobuf.Int32Value LocationId = 11;
  string UserId = 12;

  LocationResource Location = 32;
  repeated SensorResource Sensors = 33;
}


message LocationResource {
  int32 Id = 1;
  string Name = 2;
  string UserId = 3;

  // Properties
  google.protobuf.StringValue DisplayName = 4;
  google.protobuf.FloatValue Latitude = 5;
  google.protobuf.FloatValue Longitude = 6;
  google.protobuf.Timestamp LastModified = 7;
  google.protobuf.Timestamp Created = 8;
}


message LocationResourceExtended {
  int32 Id = 1;
  string Name = 2;
  string UserId = 3;

  // Properties
  google.protobuf.StringValue DisplayName = 4;
  google.protobuf.FloatValue Latitude = 5;
  google.protobuf.FloatValue Longitude = 6;
  google.protobuf.Timestamp LastModified = 7;
  google.protobuf.Timestamp Created = 8;

  repeated DeviceResource Devices = 32;
}


message SensorResource {
  int32 Id = 1;

  string Name = 2;
  google.protobuf.StringValue DisplayName = 3;
  int32 DeviceId = 4;
  int32 TypeId = 5;
  google.protobuf.Timestamp LastModified = 6;
  google.protobuf.Timestamp Created = 7;

  SensorTypeResource Type = 32;
}

message CreateDeviceSensorResource {
  string Name = 1;
  google.protobuf.StringValue DisplayName = 2;
  int32 TypeId = 3;
}

message SensorTypeResource {
  int32 Id = 1;

  string Name = 2;
  string DataType = 3;
  string Unit = 4;
  string UnitShort = 5;
  google.protobuf.StringValue UnitSymbol = 6;
  bool IsDiscrete = 7;
  bool IsSummable = 8;
  google.protobuf.Timestamp LastModified = 10;
  google.protobuf.Timestamp Created = 11;
}